--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: John Doe # your name (or website title) here
+title: Anuraj Maurya # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Mtech , MIG
   <br><br>
-  Second description 
+  IISc Banglore (2020 - present)
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
