--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Anuraj Maurya # your name (or website title) here
+title: Rahul Kumar Dev # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Mtech , MIG
