--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rahul Kumar Dev # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/h.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Mtech , MIG
   <br><br>
